--- a/BillingSystem/Styles/Site.css
+++ b/BillingSystem/Styles/Site.css
@@ -8,7 +8,7 @@ body
     font-family: "Helvetica Neue", "Lucida Grande", "Segoe UI", Arial, Helvetica, Verdana, sans-serif;
     margin: 0px;
     padding: 0px;
-    color: black;
+    color: #666699;
 }
 
 a:link, a:visited
@@ -89,7 +89,7 @@ first child of the left and right table columns */
 
 .page
 {
-    width: 920px;
+    width: 930px;
     background-color: #fff;
     margin: 20px auto 0px auto;
     /*border: 1px solid #496077;*/
@@ -176,7 +176,7 @@ div.menu ul li a, div.menu ul li a:visited
     color: white;
     display: block;
     line-height: 1.35em;
-    padding: 4px 20px;
+    padding: 4px 10px;
     text-decoration: none;
     white-space: nowrap;
 }
